@@ -17,6 +17,7 @@
 #include "stack.h"
 #include "callback.h"
 #include "alloc.h"
+#include "intext.h"
 #include "natdynlink.h"
 #include "osdeps.h"
 #include "fail.h"
@@ -74,6 +75,7 @@ CAMLprim value caml_natdynlink_run(void *handle, value symbol) {
   CAMLparam1 (symbol);
   CAMLlocal1 (result);
   void *sym,*sym2;
+  struct code_fragment * cf;
 
 #define optsym(n) getsym(handle,unit,n)
   char *unit;
@@ -94,8 +96,14 @@ CAMLprim value caml_natdynlink_run(void *handle, value symbol) {
 
   sym = optsym("__code_begin");
   sym2 = optsym("__code_end");
-  if (NULL != sym && NULL != sym2)
+  if (NULL != sym && NULL != sym2) {
     caml_page_table_add(In_code_area, sym, sym2);
+    cf = caml_stat_alloc(sizeof(struct code_fragment));
+    cf->code_start = (char *) sym;
+    cf->code_end = (char *) sym2;
+    cf->digest_computed = 0;
+    caml_ext_table_add(&caml_code_fragments_table, cf);
+  }
 
   entrypoint = optsym("__entry");
   if (NULL != entrypoint) result = caml_callback((value)(&entrypoint), 0);
