@@ -24,6 +24,7 @@
 #include "debugger.h"
 #include "fix_code.h"
 #include "instruct.h"
+#include "intext.h"
 #include "md5.h"
 #include "memory.h"
 #include "misc.h"
@@ -40,15 +41,21 @@ unsigned char caml_code_md5[16];
 void caml_load_code(int fd, asize_t len)
 {
   int i;
-  struct MD5Context ctx;
+  struct code_fragment * cf;
 
   caml_code_size = len;
   caml_start_code = (code_t) caml_stat_alloc(caml_code_size);
   if (read(fd, (char *) caml_start_code, caml_code_size) != caml_code_size)
     caml_fatal_error("Fatal error: truncated bytecode file.\n");
-  caml_MD5Init(&ctx);
-  caml_MD5Update(&ctx, (unsigned char *) caml_start_code, caml_code_size);
-  caml_MD5Final(caml_code_md5, &ctx);
+  /* Register the code in the table of code fragments */
+  cf = caml_stat_alloc(sizeof(struct code_fragment));
+  cf->code_start = (char *) caml_start_code;
+  cf->code_end = (char *) caml_start_code + caml_code_size;
+  caml_md5_block(cf->digest, caml_start_code, caml_code_size);
+  cf->digest_computed = 1;
+  caml_ext_table_init(&caml_code_fragments_table, 8);
+  caml_ext_table_add(&caml_code_fragments_table, cf);
+  /* Prepare the code for execution */
 #ifdef ARCH_BIG_ENDIAN
   caml_fixup_endianness(caml_start_code, caml_code_size);
 #endif
