@@ -1,5 +1,5 @@
-ABCDEF
 This is stub1!
+ABCDEF
 This is stub2, calling stub1:
 This is stub1!
 Ok!
