@@ -5,7 +5,7 @@
 
 value stub1() {
   CAMLlocal1(x);
-  printf("This is stub1!\n");
+  printf("This is stub1!\n"); fflush(stdout);
   x = caml_copy_string("ABCDEF");
   return x;
 }
