@@ -6,8 +6,8 @@
 extern value stub1();
 
 value stub2() {
-  printf("This is stub2, calling stub1:\n");
+  printf("This is stub2, calling stub1:\n"); fflush(stdout);
   stub1();
-  printf("Ok!\n");
+  printf("Ok!\n"); fflush(stdout);
   return Val_unit;
 }
