@@ -14,5 +14,7 @@ let cbs = ref []
 let add_cb f = cbs := f :: !cbs
 let runall () = List.iter (fun f -> f ()) !cbs
 
+(*
 let () =
   at_exit runall
+*)
