@@ -1,3 +1,6 @@
+let () =
+  Api.add_cb (fun () -> print_endline "Callback from main")
+
 let ()  =
   Dynlink.init ();
   Dynlink.allow_unsafe_modules true;
@@ -15,6 +18,18 @@ let ()  =
 	    (Dynlink.error_message err)
       | exn ->
 	  Printf.printf "Error: %s\n" (Printexc.to_string exn)
-  done
+  done;
+  flush stdout;
+  try
+    let oc = open_out_bin "marshal.data" in
+    Marshal.to_channel oc !Api.cbs [Marshal.Closures];
+    close_out oc;
+    let ic = open_in_bin "marshal.data" in
+    let l = (Marshal.from_channel ic : (unit -> unit) list) in
+    close_in ic;
+    List.iter (fun f -> f()) l
+  with Failure s ->
+    Printf.printf "Failure: %s\n" s
+
 
 
